--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
       "tap": "^18.6.1"
     },
     "dependencies": {
-      "express": "^4.18.2"
+      "express": "^4.18.2",
+      "bcrypt": "^5.1.0",
+      "jsonwebtoken": "^9.0.0",
+      "axios": "^1.4.0"
     },
     "engines": {
       "node": ">= 18.0.0"
